# pyturboquant

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: CONTRIBUTING.md  SECURITY.md
benchmarks/: _beir_helpers.py  bench_beir.py  bench_distortion.py  bench_nn_search.py  bench_search_memory.py
data/codebooks/: gaussian_b3.pt  gaussian_b4.pt  gaussian_b5.pt  gaussian_b6.pt
scripts/: precompute_codebooks.py
src/pyturboquant/: __init__.py
src/pyturboquant/core/: __init__.py  codebook.py  mse_quantizer.py  packed.py  prod_quantizer.py  qjl.py  rotation.py  types.py
src/pyturboquant/data/codebooks/: gaussian_b1.pt  gaussian_b2.pt  gaussian_b7.pt  gaussian_b8.pt
src/pyturboquant/search/: __init__.py  distance.py  index.py  langchain.py
src/pyturboquant/utils/: __init__.py  beta_distribution.py  metrics.py
tests/: conftest.py
tests/core/: test_codebook.py  test_functional_api.py  test_mse_quantizer.py  test_packed.py  test_prod_quantizer.py  test_qjl.py  test_rotation.py
tests/search/: test_distance.py  test_index.py  test_langchain.py
